# MicroCanonicalHMC

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTV.py  ESH.py  Ensamble_tutorial.ipynb  ErrorAnalysis.nb  HMC.py  Makefile  NUTS.py  README.md  TplusV.py  advanced_tutorial.ipynb  benchmark.py  benchmark_sampling.py  benchmark_targets.py  benchmark_targets_HMC.py  bencmark_sampling.py  bias.py  check_distribution.py  check_integrator.py  condaenv.sh  container.slurm  correlation_length.py  coupled.ipynb  distributed.py  energy_fluctuations.py  example.py  fastgrid_resultsGaussian_linear_1.010000020.csv  fastgrid_resultsGaussian_linear_1.01000020.csv  fastgrid_resultsGaussian_linear_1.0100020.csv  fastgrid_resultsGaussian_linear_1.02154520.csv  fastgrid_resultsGaussian_linear_1.04641620.csv  fastgrid_resultsGaussian_linear_1.0920.csv  fastgrid_resultsGaussian_log_1000100020.csv  fastgrid_resultsGaussian_log_1000215520.csv  fastgrid_resultsGaussian_log_100021620.csv  fastgrid_resultsGaussian_log_1000220.csv  fastgrid_resultsGaussian_log_100046520.csv  fastgrid_resultsGaussian_log_1000620.csv  (+147 more)
HMC/: NUTS.py  mchmc_to_numpyro.py  myHMC.py
MCHMC/: benchmark_targets.py  jump_identification.py  mchmc.py
adjusted/: compare_to_nuts.ipynb  grid_search.ipynb  rescaled.ipynb  results_recent.ipynb  simple.ipynb  simple.py
apidocs/: index.html  search.js
benchmarks/: IRT.py  benchmark.py  benchmark_hard_problems.py  benchmark_kappa.py  benchmark_omelyan.py  benchmark_omelyan_low_dim.py  benchmarks_mchmc.py  benchmarks_numpyro.py  brownian.py  demo.ipynb  error.py  grid.py  (+22 more)
(+665 files in other folders)
